Switched to slash (and hybrid) commands

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 capstone = "^5.0.0"
 "discord.py" = {git = "https://github.com/Rapptz/discord.py.git"}
 pefile = "^2021.9.3"
+jishaku = "^2.5.0"
 
 [tool.poetry.dev-dependencies]
 
