--- a/.gitignore
+++ b/.gitignore
@@ -209,6 +209,6 @@ botToken.py
 
 #Some osx shit
 .DS_Store
-files/.DS_Store
+files/*
 
 # End of https://www.toptal.com/developers/gitignore/api/venv,python,visualstudiocode
