--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
-name = "disasmBot"
-version = "0.1.0"
+name = "Discerpo"
+version = "0.9.0"
 description = "A discord bot that dissasembles executables"
 authors = ["Gabriel"]
 license = "MIT"
